	  This added ring-connection data to the binary, which resulted
	  in updating tests because of increased object binary sizes.  
	  New member of class_traits: tag_name (const char[]).
	  90% of art_object_instance_{int,bool}.{h,cc} are commented out now.
	  Will perform massive cleanup after applying instance collection
	  template to remaining types: enum, struct, channel, process.


2005-02-24	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-09-instance-05:
	  Chose bool_instance_alias_info as the first guinea pig class
	  to use instance_alias_info class template, 
	  based on class_traits<Tag>.  
	  Nothing blew up, all tests still intact.

	* -instance-06:
	  Major name clean-up and substitution to reduce ambiguity
	  and provide template-typedef-like naming interface
	  with class_traits for dimension-specific classes.  

	* -instance-07:
	  Ported bool_instance_alias_info, bool_instance_alias_base, 
	  and bool_instance_alias<D> to class_traits template version.  
	  All test still intact!  Next: porting instance_collections.

	* -instance-08:
	  Converted bool_instance_collection and arrays over using
	  template instance_collection.  Nothing died, but code is 
	  messy with conditionals...
	  To do: define functors for type-specific variations
	  in methods... may have to make them 'friendly'.  

	* -instance-09:
	  Added instance_collection functor prototypes for 
	  collection parameter persistence, type-committing.  
	  So far, only specialized for bool_tag, others will follow in time.  


2005-02-23	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-04-object-01-13-alias-09-instance-01:
	  New branch for the purpose of making the instance_collection
	  class framework consistent.  
	  This revision introduces classification tag which control the 
	  infrastructure of template class patterns with a set of
	  traits-class specializations.  